mistic/app/static/css/mistic.css
/*
 * Mistic general css
 */
 
body {
  font-family: helvetica,arial,sans-serif;
  background-color: #f0f0f0;
  padding: 60px 0px 0px 0px;
  z-index:10;
}

form#pdfform {
  margin: 0;
  padding: 0;
  border: 0;
}

input {
  width:230px;
}

select {
  width:230px;
}

select[name$="_length"] {
    width: 8ex;
}

input.valid {
  color: blue;
}

div#graph {
  margin-top: 5px;
  border: 1px solid #aaa;
}

div#graph text {
  pointer-events : none;
}

.extent {
  fill-opacity: .125;
  fill: 'black';
  shape-rendering: crispEdges;
  cursor:crosshair;
}

.resize {
  fill: 'blue';
  visibility: visible;
}

circle {
  fill-opacity: 1;
}


#sample_menu [class^="icon-"] {
   cursor:pointer;
 
}


div#more-information {
   font-family: helvetica,arial,sans-serif;
   font-size: 11px; 
   padding: 10px 0px 0px 0px;
   overflow:hidden;
}

div#more-information a,
div#more-information a:hover
{
  text-decoration: none;
  color : rgb(58, 55, 55);
  pointer-events : none;
}



.go-cellular_component span.label,
.go-biological_process span.label,
.go-molecular_function span.label,
.gene-item             span.label {
  -webkit-border-radius: 5px;
     -moz-border-radius: 5px;
          border-radius: 5px;
  padding: 2px 4px 1px;
  border: 1px solid white;
  font-weight: inherit;
}

.go-cellular_component span.label { background-color: #800; }
.go-biological_process span.label { background-color: #080; }
.go-molecular_function span.label { background-color: #008; }



.gene-item span.label { color: black; background-color: #ddd; }


.label,
.badge {
  display: inline-block;
}



.accordion-body {
  background-color: #ffffff;
  
}

.accordion-heading {
  background-color:#EAE9E9;
  border-bottom: 1px solid transparent;
  border-top-right-radius: 3px;
  border-top-left-radius: 3px;
 
   
}

.accordion-toggle, .accordion-toggle:hover,
.accordion-toggle:focus  {
  cursor: pointer;
  text-decoration: none;
  color:#333333;
  
}



div#sample_enrichment {
  font-size: 80%;
  max-height: 200px;
  overflow-y: auto;
}

ul#menu1 {
  position:relative;
}

.dropdown-menu li {
  position:relative;
 }

.dropdown-menu li > a:hover,
.dropdown-menu .active > a:hover {
  background-color: #66aacc;
}



.dropdown-submenu {
    position:absolute;
    display: none;
    left: 50%;
    top:-1px;
}

.dropdown-menu li:hover .dropdown-submenu {
    display: block;
   
}



path.arc:hover {
  fill: #346;
}

path.arc.highlight {
  fill: #f00;
}
path.axis.selected {
  stroke-width:3.5;
}



.dataset-table tbody {
  cursor: pointer;
  color: #aaa;
}

.dataset-table tbody tr.selectable {
  color: #000;
}

.dataset-table tbody tr.selectable:hover {
  background-color: #ffa;
}

.dataset-table td {
  white-space: nowrap;
}

.btn.zeroclipboard-is-active {
    background-color: #e6e6e6;
    background-color: #d9d9d9 \9;
    background-image: none;
    outline: 0;
    -webkit-box-shadow: inset 0 2px 4px rgba(0,0,0,0.15),0 1px 2px rgba(0,0,0,0.05);
    -moz-box-shadow: inset 0 2px 4px rgba(0,0,0,0.15),0 1px 2px rgba(0,0,0,0.05);
    box-shadow: inset 0 2px 4px rgba(0,0,0,0.15),0 1px 2px rgba(0,0,0,0.05);
}

.btn.zeroclipboard-is-hover {
    color: #333;
    text-decoration: none;
    background-color: #e6e6e6;
    background-color: #d9d9d9 \9;
    background-position: 0 -15px;
    -webkit-transition: background-position .1s linear;
    -moz-transition: background-position .1s linear;
    -ms-transition: background-position .1s linear;
    -o-transition: background-position .1s linear;
    transition: background-position .1s linear;
}

div.point-group {
    position: relative;
    width: 100%;
    height: 54px;
    white-space: nowrap;
    margin-bottom: 2px;
}

div.point-group .widgets {
    float: right;
    margin-right: 3px;
    white-space: nowrap;
}

div.point-group .widgets a {
    padding: 0px 2px;
    font-weight: bold;
    color: #000;
    text-shadow: 0 1px 0 #fff;
    opacity: .2;
    filter: alpha(opacity=20);
}

div.point-group .widgets a:hover {
    color: #000;
    text-decoration: none;
    cursor: pointer;
    opacity: .4;
    filter: alpha(opacity=40);
}

div.point-group .widgets a.disabled:hover {
    color: #000;
    text-decoration: none;
    cursor: default;
    opacity: .2;
    filter: alpha(opacity=20);
}

div.point-group div.content {
    position: absolute;
    padding: 2px;
    top: 1px;
    left: 1px;
    bottom: 1px;
    right: 1px;
    background-color: #f5f5f5;
    -webkit-border-radius: 6px;
    -moz-border-radius: 6px;
    border-radius: 6px;
    border: 1px solid #d8d8d8;
    border: 1px solid rgba(0,0,0,0.1);
}

div.point-group .header {
    height: 18px;
    display: block;
    overflow: hidden;
}

div.point-group .header i {
    font-weight: 100;
    color: #aaa;
}

div.point-group .header span {
    padding: 1px 4px;
    font-weight: normal;
    white-space: nowrap;
    color: #222;
}

div.point-group .header span {
    vertical-align: top;
}

div.point-group .control-group {
    padding: 3px;
    height: 20px;
    display: inline-block;
    margin: 0px;
    background-color: #fff;
    border: 1px solid #ccc;
    border: 1px solid rgba(0,0,0,0.2);
    -webkit-border-radius: 4px;
    -moz-border-radius: 4px;
    border-radius: 4px;
    -webkit-box-shadow: inset 0 1px 1px rgba(0,0,0,0.05);
    -moz-box-shadow: inset 0 1px 1px rgba(0,0,0,0.05);
    box-shadow: inset 0 1px 1px rgba(0,0,0,0.05);
}

div.point-group .sg-style,
div.point-group .sg-ops i {
    cursor: pointer;
}

div#point-group-settings label.control-label {
    width: 8ex;
}

div#point-group-settings div.controls {
    margin-left: 9ex;
}

div#point-group-settings div.control-group {
    margin-bottom: 5px;
}

div#point-group-settings .colour.disabled span,
div#point-group-settings .colour.disabled div.alpha-image {
    background: transparent !important;
}

div#point-group-settings .colour span {
    position: absolute;
    left: 3px;
    right: 3px;
    top: 3px;
    bottom: 3px;
    display: inline-block;
    border: 1px solid black;
}

div#point-group-settings .colour div.alpha-image {
    position: absolute;
    left: 3px;
    right: 3px;
    top: 3px;
    bottom: 3px;
    display: inline-block;
    background-image: url(data:image/png;base64,iVBORw0KGgoAAAANSUhEUgAAAAwAAAAMCAIAAADZF8uwAAAAGUlEQVQYV2M4gwH+YwCGIasIUwhT25BVBADtzYNYrHvv4gAAAABJRU5ErkJggg==);
}

div#sample_characteristic input {
    display: inline-block;
    margin-bottom:0px;
}

div#sample_characteristic button {
    display: inline;
    position : absolute;
}



#part2 {
  overflow-y: hidden;
  overflow-x: hidden;
  font-family: helvetica; 
  font-size: 10.5px; 
  margin : 0px;
  padding-right:10px;
  padding-top:10px;
}


#part2 > .tab-content > .tab-pane{
  background-color:#fff;
  border: 1px solid #ddd;
  padding : 10px;
  border-top-color: transparent;
}

#part2 > .nav-tabs {
  margin-bottom : 0px;
 

}

#part2.nav-tabs > .active > a,
#part2.nav-tabs > .active > a:hover {
  color: #555555;
  cursor: default;
  background-color:white;
  border: 1px solid #ddd;
 
}
#part2.nav-tabs > li > a {
  border : 1px solid #555; 
  border-bottom-color: transparent;
}

.group-data {
    padding: 0px 2px;
    font-weight: bold;
    color: #000;
    text-shadow: 0 1px 0 #fff;
    opacity: .2;
    filter: alpha(opacity=20);
}

.group-data:hover,.group-data.active {
    color: #000;
    text-decoration: none;
    cursor: pointer;
    opacity: .8;
    filter: alpha(opacity=40);
}

.group-data.disabled:hover {
    color: #000;
    text-decoration: none;
    cursor: default;
    opacity: .2;
    filter: alpha(opacity=20);
}
.source-links {
  float:left;
  padding-left:3px;
  font-size: 11px;
  font-weight: bold;
  line-height: 18px;
  color: #999999;
  text-shadow: 0 1px 0 rgba(255, 255, 255, 0.5);
  text-transform: uppercase;
  margin-left:3px;
  margin-bottom:3px;
}

.source-links > li {
  display : inline;
  padding-left: 3px;
  padding-right: 3px;
}
.source-links > li >a { 
 
  padding-top:10px;
  padding-bottom:10px;
  padding-left:3px;
  padding-right:3px;
  -webkit-border-radius: 5px;
     -moz-border-radius: 5px;
          border-radius: 5px;
}
.source-links > li > a:hover {
    background-color: #f0f0f0;
    text-decoration:none;
}
.accordion-inner > pre {
    background-color:transparent;
    border : 0px;
    font-family:inherit;
}

#sample_annotation {
   text-overflow : ellipsis;
   display: block;
   margin-right: -22px;
   width : 100%;
}

#sample_annotation_drop {
    display: inline-block;
    width: 24px;
    position :absolute;
    
    background-clip : padding-box;
}

